--- a/SigebiWeb/src/main/resources/application.properties
+++ b/SigebiWeb/src/main/resources/application.properties
@@ -7,7 +7,8 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost/sigebi
 spring.datasource.username=postgres
 spring.datasource.password=admin
-spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+spring.servlet.multipart.max-file-size=1MB
+spring.servlet.multipart.max-request-size=1MB
 
 #spring.security.user.name=sigebi
 #spring.security.user.password=123
