--- a/SigebiWeb/src/main/resources/application.properties
+++ b/SigebiWeb/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost/sigebi
 spring.datasource.username=postgres
-spring.datasource.password=postgres
+spring.datasource.password=admin
 spring.servlet.multipart.max-file-size=1MB
 spring.servlet.multipart.max-request-size=1MB
 
