--- a/SigebiWeb/src/main/resources/application.properties
+++ b/SigebiWeb/src/main/resources/application.properties
@@ -1,12 +1,12 @@
 
 
 spring.jpa.database=POSTGRESQL
-spring.jpa.show-sql=true
+#spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost/sigebi
-spring.datasource.username=postgres
-spring.datasource.password=postgres
+spring.datasource.username=sigebi
+spring.datasource.password=sigebi#2021
 spring.servlet.multipart.max-file-size=1MB
 spring.servlet.multipart.max-request-size=1MB
 
