--- a/SigebiWeb/src/main/resources/application.properties
+++ b/SigebiWeb/src/main/resources/application.properties
@@ -5,15 +5,18 @@ spring.jpa.database=POSTGRESQL
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost/sigebi
-spring.datasource.username=sigebi
-spring.datasource.password=sigebi#2021
+#produccion
+#spring.datasource.username=sigebi
+#spring.datasource.password=sigebi#2021
+#local
+spring.datasource.username=postgres
+spring.datasource.password=postgres
 spring.servlet.multipart.max-file-size=1MB
 spring.servlet.multipart.max-request-size=1MB
 
 # security
 jwt.secret = secret
 jwt.expiration = 600
-
 
 # hibernate genera SQL optimizado
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
